# libcalib

./: .gitignore  CMakeLists.txt  README.md
example/full_match/: config_template.json
example/pattern_match/: config_template.json
include/libcalib/: calib_def.h  calibration.h  ceres_type.h  config.h  extract.h  fileio.h  interface.h
sample/: CMakeLists.txt  calibrate_single_camera.cc  calibrate_stereo_camera.cc
src/: CMakeLists.txt  calibration.cc  ceres_type.cc  config.cc  extract.cc  fileio.cc  interface.cc
